# discord-markdown

./: .gitignore  README.md  pyproject.toml
discord_markdown/: __init__.py  ast.py  compiler.py  discord_markdown.py  lexer.py  parser.py  parser_2.py  spec.py
tests/: fixtures.py  test_compiler.py  test_discord_markdown.py  test_lexer.py  test_parser.py  test_parser2.py  test_parser_2.py
tests/files/: discord.html  discord.md
