[tool.poetry]
name = "discord_markdown"
version = "0.2.0"
description = "Convert discord messages to HTML"
license = "MIT"
authors = ["BitJockey <bitjockey@jackpoint.network>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
