[tool.poetry]
name = "discord_markdown"
version = "0.3.1"
description = "Convert discord messages to HTML"
license = "MIT"
authors = ["BitJockey <bitjockey@jackpoint.network>"]
readme = "README.md"
repository = "https://github.com/bitjockey42/discord-markdown"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
